<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:paddingTop="5dp"
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layerlist"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#30b3e3" />

    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questoes"
        android:background="@drawable/layerlist"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:hint="@string/nome"
        android:id="@+id/editTextNome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
        

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditTextNumero"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numero" />

    <EditText
        android:hint="@string/mensagem"
        android:id="@+id/editTextMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bbkg"
        android:text="@string/enviar" />
    
        <Button
            android:id="@+id/sairQuestao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bbkg"
            android:text="@string/fechar"
            android:textColor="#fff" />

</LinearLayout>