<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000" >

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/logo"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/logo" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00000000"
            android:contentDescription="@string/youtube"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/youtube_icon" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageButton1"
            android:background="#00000000"
            android:contentDescription="@string/fb"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:src="@drawable/fb_icon" />
    </RelativeLayout>